--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Lilita+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap");
+
+p {
+  font-family: "Lilita One", sans-serif;
+  font-weight: 400;
+  text-decoration: underline;
+  font-style: normal;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
