--- a/src/components/ReusableComponents/ActionCard.css
+++ b/src/components/ReusableComponents/ActionCard.css
@@ -1,49 +1,64 @@
 .action-card {
-  width: 300px;
+  display: flex;
+  flex-direction: column;
+  height: 480px;
+  width: 500px;
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   font-family: Arial, sans-serif;
-  background-color: #f0f4f8;
+  background-color: #3686ff;
+  cursor: pointer;
+}
+
+.action-card:hover {
+  background-color: #3279e6;
 }
 
 .card-image {
   width: 100%;
-  height: 180px;
+  height: 50%;
+  min-height: 240px;
   background-size: cover;
   background-position: center;
 }
 
 .card-content {
-  padding: 16px;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  padding: 10px 20px;
 }
 
 .card-title {
-  font-size: 20px;
+  font-size: 28px;
   font-weight: bold;
-  color: #212121;
-  margin-bottom: 8px;
+  text-align: center;
+  color: white;
+  margin: 8px 0;
 }
 
 .card-description {
   font-size: 14px;
-  color: #616161;
+  color: white;
+  text-align: left;
   margin-bottom: 16px;
 }
 
 .card-button {
+  width: 100%;
+  height: 56px;
   padding: 10px 20px;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: bold;
   color: white;
-  background-color: #34c759;
+  background-color: #1cc8ae;
   border: none;
-  border-radius: 4px;
+  border-radius: 50px;
   cursor: pointer;
   transition: background-color 0.3s;
+  align-self: baseline;
 }
 
 .card-button:hover {
-  background-color: #28a745;
+  background-color: #1aab95;
 }
