--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,12 @@ h2 {
   color: #fff;
 }
 
+h3 {
+  color: #fff;
+  font-family: "Lilita One", sans-serif;
+  font-size: 2.5rem;
+}
+
 p {
   font-family: "Instrument Sans", sans-serif;
   font-size: 1.25rem;
