--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,12 +1,13 @@
 footer {
   background-color: #0f43a4;
   min-height: 600px;
+  padding: 100px 50px 50px;
 }
 
 .anker {
   display: flex;
-  width: 358px;
-  height: 249px;
+  width: 79px;
+  height: auto;
   padding-top: 46px;
   flex-direction: column;
   justify-content: flex-end;
@@ -17,6 +18,7 @@ footer {
 
 .backTop {
   margin: auto;
+  margin-bottom: 50px;
   display: flex;
   width: 358px;
   height: 249px;
@@ -24,12 +26,18 @@ footer {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  gap: 23px;
+  gap: 15px;
   flex-shrink: 0;
+  cursor: pointer;
+}
+
+.backTop:hover {
+  filter: brightness(0.9);
 }
 
 .SoMe {
   display: flex;
+  margin-top: 50px;
   justify-content: flex-start;
   gap: 23px;
 }
@@ -43,6 +51,7 @@ footer {
   display: flex;
   justify-content: flex-end;
   gap: 23px;
+  flex-wrap: wrap;
 }
 
 .unIcons img {
