--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   --color2: #81a8f0;
   --color3: #689af4;
   --color4: #3686ff;
-  --color5: #3686ff;
+  --color5: #1b65ed;
   --color6: #1153cc;
   --color7: #0f43a4;
 }
