--- a/src/components/Wave4.css
+++ b/src/components/Wave4.css
@@ -1,5 +1,5 @@
-.wave {
-  background-image: url(../../public/wave1front.png);
+.wave4 {
+  background-image: url(../../public/wave4.png);
   height: 116px;
   position: absolute;
   right: 0;
@@ -7,25 +7,25 @@
   width: 100%;
 }
 
-.wave#wave1 {
+.wave4#wave1 {
   z-index: 1000;
   opacity: 1;
   animation: animate 4s linear infinite;
 }
 
-.wave#wave2 {
+.wave4#wave2 {
   z-index: 998;
   opacity: 0.5;
   animation: animate2 4s linear infinite;
 }
 
-.wave#wave3 {
+.wave4#wave3 {
   z-index: 999;
   opacity: 0.2;
   animation: animate 3s linear infinite;
 }
 
-.wave#wave4 {
+.wave4#wave4 {
   z-index: 999;
   opacity: 0.7;
   animation: animate2 3s linear infinite;
