--- a/src/components/Wave6.css
+++ b/src/components/Wave6.css
@@ -1,5 +1,5 @@
-.wave {
-  background-image: url(../../public/wave1front.png);
+.wave6 {
+  background-image: url(../../public/wave6.png);
   height: 116px;
   position: absolute;
   right: 0;
@@ -7,28 +7,28 @@
   width: 100%;
 }
 
-.wave#wave1 {
+.wave6#wave1 {
   z-index: 1000;
   opacity: 1;
-  animation: animate 9s linear infinite;
+  animation: animate 4s linear infinite;
 }
 
-.wave#wave2 {
+.wave6#wave2 {
   z-index: 998;
   opacity: 0.5;
-  animation: animate2 8s linear infinite;
+  animation: animate2 4s linear infinite;
 }
 
-.wave#wave3 {
+.wave6#wave3 {
   z-index: 999;
   opacity: 0.2;
-  animation: animate 8s linear infinite;
+  animation: animate 3s linear infinite;
 }
 
-.wave#wave4 {
+.wave6#wave4 {
   z-index: 999;
   opacity: 0.7;
-  animation: animate2 9s linear infinite;
+  animation: animate2 3s linear infinite;
 }
 
 @keyframes animate {
