--- a/src/components/EventCard.css
+++ b/src/components/EventCard.css
@@ -1,4 +1,5 @@
 .event-card {
+  position: relative;
   width: 800px;
   height: 400px;
   border-radius: 8px;
@@ -16,6 +17,9 @@
   background-color: #3279e6;
 }
 
+.event-card:hover .custom-button {
+  display: inline-block;
+}
 .event-card-image {
   height: 380px;
   background-size: cover;
@@ -27,4 +31,14 @@
   font-size: 30px;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.custom-button {
+  display: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
 }
