Footer_Event_TakeAction_Darkmode

--- a/src/components/Events.css
+++ b/src/components/Events.css
@@ -1,5 +1,5 @@
 .events-container {
-  padding: 100px 50px;
+  padding: 100px 50px 200px;
   background-color: #1253cc;
   text-align: center;
   position: relative;
