--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,13 @@
   box-sizing: border-box;
 }
 
+.wrapper {
+  transition: filter 0.3s ease;
+}
+.wrapper.grayscale {
+  filter: grayscale(1);
+}
+
 h2 {
   font-family: "Lilita One", sans-serif;
   font-size: 3rem;
