--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -24,13 +24,6 @@ img {
   border-radius: 15px;
 }
 
-.toggle {
-  width: 58px;
-  height: 37px;
-  display: flex;
-  align-self: center;
-}
-
 .logo {
   display: flex;
   justify-content: center;
@@ -41,6 +34,17 @@ img {
   position: absolute;
   top: 37%;
   display: flex;
+}
+
+.custom-button {
+  display: none;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  z-index: 2000;
 }
 
 .diveinimage {
