--- a/src/components/TakeAction.css
+++ b/src/components/TakeAction.css
@@ -2,7 +2,7 @@
 
 .TakeAction {
   background-color: var(--color5);
-  padding: 100px 50px;
+  padding: 100px 50px 200px;
   text-align: center;
   position: relative;
 }
