--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,27 +1,13 @@
 header {
   min-height: 100vh;
   background-color: #e1faff;
-  padding: 70px 50px;
+  padding: 0 50px;
   position: relative;
 }
 
 img {
   width: 100%;
   display: block;
-}
-
-.navigation {
-  display: flex;
-  gap: 30px;
-  justify-content: end;
-}
-
-.burgermenu {
-  background-color: #3686ff;
-  width: 50px;
-  height: 50px;
-  padding: 12.5px;
-  border-radius: 15px;
 }
 
 .logo {
