--- a/src/components/SignUpForm/SignupForm.css
+++ b/src/components/SignUpForm/SignupForm.css
@@ -5,18 +5,18 @@ body {
 }
 
 .signup-container {
-  display: flex;
+  margin-left: 20px;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
+  align-items: center; */
 }
 
 .signup-box {
-  background-color: #2e4ea2; /* Dark blue background */
+  background-color: #3686ff; /* Dark blue background */
   color: white;
   padding: 2rem;
   border-radius: 10px;
-  width: 400px;
+
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -45,20 +45,38 @@ input {
   padding: 0.5rem;
   margin-bottom: 1rem;
   border: none;
-  border-radius: 5px;
   font-size: 0.9rem;
 }
 
-button {
-  padding: 0.7rem;
-  background-color: #39c0b3; /* Teal button */
-  color: white;
-  font-size: 1rem;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+textarea {
+  margin-bottom: 30px;
+  padding: 10px;
 }
 
-button:hover {
-  background-color: #32a89a; /* Darker teal on hover */
+.card-button {
+  width: 50%;
+  height: 56px;
+  padding: 10px 20px;
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  background-color: #1cc8ae;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  place-self: start;
+}
+
+.card-button:hover {
+  background-color: #1aab95;
+}
+
+label {
+  font-weight: 700;
+}
+@media only screen and (min-width: 1100px) {
+  .signup-box {
+    width: 400px;
+  }
 }
