--- a/src/pages/TakeActionSite.css
+++ b/src/pages/TakeActionSite.css
@@ -2,13 +2,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: #c9f5fe;
+  background-color: #e1faff;
 }
 
 .top_container {
   min-height: 100vh;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .grid_container {
@@ -16,4 +16,29 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   padding: 20px;
+}
+
+h3 {
+  color: #3686ff;
+  margin: 30px 0;
+}
+
+.margin_container {
+  margin: 10px 40px;
+}
+
+.bot_action_card_container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin: 40px 0;
+}
+
+@media only screen and (min-width: 1100px) {
+  .top_container {
+    flex-direction: row;
+  }
+  .bot_action_card_container {
+    flex-direction: row;
+  }
 }
