--- a/src/components/HeyYou.css
+++ b/src/components/HeyYou.css
@@ -6,10 +6,11 @@
   border-radius: 14px;
 }
 
-h3 {
+.heyyou-h {
   text-align: center;
   padding-bottom: 1rem;
   clear: both;
+  color: #fff;
 }
 
 .heyyoutext {
