--- a/src/pages/EventSite.css
+++ b/src/pages/EventSite.css
@@ -2,6 +2,7 @@
   background-image: url(/public/event1.webp);
   width: 100%;
   height: 500px;
+  margin-top: 70px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -37,13 +38,14 @@ h1 {
 .SignUpEvent {
   background-color: var(--primary);
   width: 100%;
-  height: 400px;
+  min-height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 10px;
   margin: 100px 0;
-  padding: 75px 0;
+  padding: 75px 10px;
+  overflow: hidden;
 }
 
 .SignUpEvent h2 {
