--- a/src/components/HeyYou.css
+++ b/src/components/HeyYou.css
@@ -1,15 +1,23 @@
 .heyyou {
   max-width: 910px;
-  height: fit-content;
   background-color: var(--primary);
   padding: 5rem 88px;
   border-radius: 14px;
+  position: absolute;
+  top: -100%;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: top 0.5s ease-in-out;
+  z-index: 1000;
+}
+
+.popup-slide-in {
+  top: 2%;
 }
 
 .heyyou-h {
   text-align: center;
   padding-bottom: 1rem;
-  clear: both;
   color: #fff;
 }
 
@@ -21,4 +29,11 @@
   width: 48px;
   height: 48px;
   float: right;
+  cursor: pointer;
+}
+
+.Toggle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
