--- a/src/components/ToggleSwitch.css
+++ b/src/components/ToggleSwitch.css
@@ -1,3 +1,8 @@
+.wrapper {
+  transition: filter 0.3s ease;
+  position: relative;
+}
+
 .wrapper.grayscale {
   filter: grayscale(1);
 }
@@ -18,6 +23,7 @@
   z-index: 100;
   display: flex;
   align-self: center;
+  filter: grayscale(0);
 }
 
 .toggle-switch:hover {
@@ -41,4 +47,13 @@
 
 .switch-circle.off {
   transform: translateX(20px);
+}
+
+.border1 {
+  border: 0;
+}
+
+#border2 {
+  scale: 1.5;
+  background-color: var(--color5);
 }
