--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -23,15 +23,13 @@ img {
   display: flex;
 }
 
-.custom-button {
-  display: none;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  z-index: 2000;
+.TryEx {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  margin-top: 650px;
+  z-index: 100;
 }
 
 .diveinimage {
