--- a/src/components/ShareThis.css
+++ b/src/components/ShareThis.css
@@ -4,6 +4,13 @@
   background-color: var(--primary);
   padding: 5rem 88px;
   border-radius: 14px;
+  position: absolute;
+  position: absolute;
+  top: 200px;
+  left: 49%;
+  transform: translateX(-50%);
+  transition: top 0.5s ease-in-out;
+  z-index: 1000;
 }
 
 .icons {
