--- a/src/components/EventCard.css
+++ b/src/components/EventCard.css
@@ -1,6 +1,8 @@
 .event-card {
   position: relative;
-  width: 800px;
+  width: 43%;
+  min-width: 573px;
+  max-width: 800px;
   height: 400px;
   border-radius: 8px;
   overflow: hidden;
