--- a/src/components/Interface.css
+++ b/src/components/Interface.css
@@ -1,6 +1,7 @@
 .interface {
   width: 100%;
-  height: 1100px;
+  min-height: 100vh;
+  height: auto;
   background: rgb(54, 134, 255);
   background: linear-gradient(
     90deg,
@@ -24,6 +25,11 @@
   width: 319px;
   height: 280px;
   margin-bottom: 2rem;
+  cursor: pointer;
+}
+
+.interfacebutton:hover {
+  filter: brightness(0.9);
 }
 
 .interfaceexit {
@@ -32,17 +38,18 @@
   float: right;
 }
 
-@media only screen and (min-width: 1100px) {
-  .interface_grid_1,
-  .interface_grid_2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding: 2rem 0;
-    width: 80%;
-    margin: 0 auto;
-  }
+.interfaceexit:hover {
+  filter: brightness(0.9);
+}
 
-  .interfacebutton {
-    margin-bottom: -1rem;
-  }
+.interface_grid {
+  max-width: 1040px;
+  display: flex;
+  align-self: center;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin: 40px 50px;
+  margin-inline: auto;
 }
