--- a/src/components/ReusableComponents/ActionCard.css
+++ b/src/components/ReusableComponents/ActionCard.css
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   height: 480px;
-  width: 500px;
+  width: 30%;
+  min-width: 415px;
+  max-width: 500px;
   border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
