--- a/src/components/Whyyoushouldcare.css
+++ b/src/components/Whyyoushouldcare.css
@@ -12,9 +12,18 @@
   font-size: 22rem;
   font-family: "Lilita One", sans-serif;
   display: flex;
+  flex-direction: column;
   align-self: center;
 }
 
+.procentgrid {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 130px;
+  margin-top: 130px;
+  max-width: 1291px;
+  margin-inline: auto;
+}
 @media only screen and (min-width: 1100px) {
   .procentgrid {
     display: grid;
