--- a/src/components/HeyYou.css
+++ b/src/components/HeyYou.css
@@ -41,3 +41,14 @@
   flex-direction: column;
   align-items: center;
 }
+
+@media screen and (max-width: 1000px) {
+  .heyyou {
+    width: 95%;
+    padding: 4rem 40px;
+  }
+
+  .heyyoutext {
+    padding: 3rem 0;
+  }
+}
