--- a/src/components/Whyyoushouldcare.css
+++ b/src/components/Whyyoushouldcare.css
@@ -24,6 +24,13 @@
   max-width: 1291px;
   margin-inline: auto;
 }
+
+@media screen and (max-width: 735px) {
+  .seventyprocent {
+    font-size: 10rem;
+  }
+}
+
 @media only screen and (min-width: 1100px) {
   .procentgrid {
     display: grid;
